# moge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.sh
baselines/: da_v2.py  da_v2_metric.py
docs/: eval.md  train.md
moge/model/: __init__.py  v1.py
moge/model/dinov2/layers/: attention.py
moge/scripts/: app.py  infer.py
moge/train/: dataloader.py
moge/utils/: geometry_numpy.py
